fix(message): 移除冗余 sender_name/recipient_name、附件补 file_size、撤回按收件人标记、对接新 FileDTO